syntax = "proto3";

package models;
option go_package = "./;api";

import "uuid.proto";

message ContactDetails{
  string type = 1;
  string detail = 2;
}

message PickPoint{
  models.UUID ID = 1;
  string name = 2;
  string address = 3;
  repeated ContactDetails contact_details = 4;
}